Some minor corrections, not pushed

--- a/_output/_tex/index.tex
+++ b/_output/_tex/index.tex
@@ -269,7 +269,7 @@ the tools of computational finance.
 \tableofcontents
 }
 
-\begin{tcolorbox}[enhanced jigsaw, title=\textcolor{quarto-callout-warning-color}{\faExclamationTriangle}\hspace{0.5em}{On the simplified nature of analysis in this document.}, left=2mm, toptitle=1mm, arc=.35mm, opacityback=0, rightrule=.15mm, colbacktitle=quarto-callout-warning-color!10!white, toprule=.15mm, bottomtitle=1mm, colback=white, titlerule=0mm, bottomrule=.15mm, leftrule=.75mm, breakable, opacitybacktitle=0.6, coltitle=black, colframe=quarto-callout-warning-color-frame]
+\begin{tcolorbox}[enhanced jigsaw, arc=.35mm, toprule=.15mm, bottomtitle=1mm, leftrule=.75mm, breakable, coltitle=black, colback=white, opacitybacktitle=0.6, colframe=quarto-callout-warning-color-frame, rightrule=.15mm, left=2mm, toptitle=1mm, title=\textcolor{quarto-callout-warning-color}{\faExclamationTriangle}\hspace{0.5em}{On the simplified nature of analysis in this document.}, titlerule=0mm, bottomrule=.15mm, opacityback=0, colbacktitle=quarto-callout-warning-color!10!white]
 
 Subject of financial analysis is very information-dense and to perform
 such an analysis (be it an analysis of industrial sectors, fundamental,
@@ -288,7 +288,7 @@ and Quarto scientific publishing system ({``Quarto''} 2025).
 
 \subsection{Sector Analysis}\label{sector-analysis}
 
-\begin{tcolorbox}[enhanced jigsaw, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Note}, left=2mm, toptitle=1mm, arc=.35mm, opacityback=0, rightrule=.15mm, colbacktitle=quarto-callout-note-color!10!white, toprule=.15mm, bottomtitle=1mm, colback=white, titlerule=0mm, bottomrule=.15mm, leftrule=.75mm, breakable, opacitybacktitle=0.6, coltitle=black, colframe=quarto-callout-note-color-frame]
+\begin{tcolorbox}[enhanced jigsaw, arc=.35mm, toprule=.15mm, bottomtitle=1mm, leftrule=.75mm, breakable, coltitle=black, colback=white, opacitybacktitle=0.6, colframe=quarto-callout-note-color-frame, rightrule=.15mm, left=2mm, toptitle=1mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Note}, titlerule=0mm, bottomrule=.15mm, opacityback=0, colbacktitle=quarto-callout-note-color!10!white]
 
 In this section we analyze financial data on websites such as
 \url{https://finance.yahoo.com}, as well as using the
@@ -302,8 +302,8 @@ web and provide summaries. Some basic charting using R language ({``R:
 Company in the Consumer Defensive
 Sector}}{Financial Analysis of the Clorox Company in the Consumer Defensive Sector}}\label{financial-analysis-of-the-clorox-company-in-the-consumer-defensive-sector}
 
-\paragraph{\texorpdfstring{\textbf{1. Sector
-Analysis}}{1. Sector Analysis}}\label{sector-analysis-1}
+\paragraph{\texorpdfstring{\textbf{Sector
+Analysis}}{Sector Analysis}}\label{sector-analysis-1}
 
 Clorox operates in the \textbf{Consumer Defensive sector}, specifically
 within the Household and Personal Products sub-sector. This sector is
@@ -318,8 +318,8 @@ S\&P500 (3.54\%).
 
 \begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
 
-\paragraph{\texorpdfstring{\textbf{2. Position Relative to
-Competitors}}{2. Position Relative to Competitors}}\label{position-relative-to-competitors}
+\paragraph{\texorpdfstring{\textbf{Position Relative to
+Competitors}}{Position Relative to Competitors}}\label{position-relative-to-competitors}
 
 Clorox's market share inside it's sector is relatively small:
 
@@ -487,7 +487,7 @@ characterizes the sector itself.
 \subsection{Personality of the
 Company}\label{personality-of-the-company}
 
-\begin{tcolorbox}[enhanced jigsaw, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Note}, left=2mm, toptitle=1mm, arc=.35mm, opacityback=0, rightrule=.15mm, colbacktitle=quarto-callout-note-color!10!white, toprule=.15mm, bottomtitle=1mm, colback=white, titlerule=0mm, bottomrule=.15mm, leftrule=.75mm, breakable, opacitybacktitle=0.6, coltitle=black, colframe=quarto-callout-note-color-frame]
+\begin{tcolorbox}[enhanced jigsaw, arc=.35mm, toprule=.15mm, bottomtitle=1mm, leftrule=.75mm, breakable, coltitle=black, colback=white, opacitybacktitle=0.6, colframe=quarto-callout-note-color-frame, rightrule=.15mm, left=2mm, toptitle=1mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Note}, titlerule=0mm, bottomrule=.15mm, opacityback=0, colbacktitle=quarto-callout-note-color!10!white]
 
 In this section we collect and cite a variety of publicly available
 sources to perform an analysis of the company personality. We use use
@@ -672,7 +672,7 @@ branding, good leadership and consistent performance.
 
 \subsection{Fundamental Analysis}\label{fundamental-analysis}
 
-\begin{tcolorbox}[enhanced jigsaw, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Note}, left=2mm, toptitle=1mm, arc=.35mm, opacityback=0, rightrule=.15mm, colbacktitle=quarto-callout-note-color!10!white, toprule=.15mm, bottomtitle=1mm, colback=white, titlerule=0mm, bottomrule=.15mm, leftrule=.75mm, breakable, opacitybacktitle=0.6, coltitle=black, colframe=quarto-callout-note-color-frame]
+\begin{tcolorbox}[enhanced jigsaw, arc=.35mm, toprule=.15mm, bottomtitle=1mm, leftrule=.75mm, breakable, coltitle=black, colback=white, opacitybacktitle=0.6, colframe=quarto-callout-note-color-frame, rightrule=.15mm, left=2mm, toptitle=1mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Note}, titlerule=0mm, bottomrule=.15mm, opacityback=0, colbacktitle=quarto-callout-note-color!10!white]
 
 In this section we will take a look at quantitative fundamental analysis
 tools provided by the ``tidyquant'' R language package (Dancho and
@@ -838,7 +838,7 @@ fundamentals.
 
 \subsection{Technical Analysis}\label{technical-analysis}
 
-\begin{tcolorbox}[enhanced jigsaw, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Note}, left=2mm, toptitle=1mm, arc=.35mm, opacityback=0, rightrule=.15mm, colbacktitle=quarto-callout-note-color!10!white, toprule=.15mm, bottomtitle=1mm, colback=white, titlerule=0mm, bottomrule=.15mm, leftrule=.75mm, breakable, opacitybacktitle=0.6, coltitle=black, colframe=quarto-callout-note-color-frame]
+\begin{tcolorbox}[enhanced jigsaw, arc=.35mm, toprule=.15mm, bottomtitle=1mm, leftrule=.75mm, breakable, coltitle=black, colback=white, opacitybacktitle=0.6, colframe=quarto-callout-note-color-frame, rightrule=.15mm, left=2mm, toptitle=1mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Note}, titlerule=0mm, bottomrule=.15mm, opacityback=0, colbacktitle=quarto-callout-note-color!10!white]
 
 Technical analysis in this section follows the wonderful tutorial
 provided here: ({``Financial Modeling with {R}''} 2025)
@@ -1038,7 +1038,7 @@ The analysis predicts stable performance in the short term.
 \subsection{Company Performance
 2019-2024}\label{company-performance-2019-2024}
 
-\begin{tcolorbox}[enhanced jigsaw, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Note}, left=2mm, toptitle=1mm, arc=.35mm, opacityback=0, rightrule=.15mm, colbacktitle=quarto-callout-note-color!10!white, toprule=.15mm, bottomtitle=1mm, colback=white, titlerule=0mm, bottomrule=.15mm, leftrule=.75mm, breakable, opacitybacktitle=0.6, coltitle=black, colframe=quarto-callout-note-color-frame]
+\begin{tcolorbox}[enhanced jigsaw, arc=.35mm, toprule=.15mm, bottomtitle=1mm, leftrule=.75mm, breakable, coltitle=black, colback=white, opacitybacktitle=0.6, colframe=quarto-callout-note-color-frame, rightrule=.15mm, left=2mm, toptitle=1mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Note}, titlerule=0mm, bottomrule=.15mm, opacityback=0, colbacktitle=quarto-callout-note-color!10!white]
 
 In this section we provide some historic data and rudimentary analysis
 of the company during the 2019-2024 period.
@@ -1169,7 +1169,7 @@ performance during the last five-year period.
 
 \subsection{Forecasting}\label{forecasting}
 
-\begin{tcolorbox}[enhanced jigsaw, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Note}, left=2mm, toptitle=1mm, arc=.35mm, opacityback=0, rightrule=.15mm, colbacktitle=quarto-callout-note-color!10!white, toprule=.15mm, bottomtitle=1mm, colback=white, titlerule=0mm, bottomrule=.15mm, leftrule=.75mm, breakable, opacitybacktitle=0.6, coltitle=black, colframe=quarto-callout-note-color-frame]
+\begin{tcolorbox}[enhanced jigsaw, arc=.35mm, toprule=.15mm, bottomtitle=1mm, leftrule=.75mm, breakable, coltitle=black, colback=white, opacitybacktitle=0.6, colframe=quarto-callout-note-color-frame, rightrule=.15mm, left=2mm, toptitle=1mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Note}, titlerule=0mm, bottomrule=.15mm, opacityback=0, colbacktitle=quarto-callout-note-color!10!white]
 
 In this section we use ARIMA model to provide a long-term forecast of
 the company stock price.
