--- a/_output/_tex/index.tex
+++ b/_output/_tex/index.tex
@@ -269,15 +269,10 @@ the tools of computational finance.
 \tableofcontents
 }
 
-\begin{tcolorbox}[enhanced jigsaw, arc=.35mm, toprule=.15mm, bottomtitle=1mm, leftrule=.75mm, breakable, coltitle=black, colback=white, opacitybacktitle=0.6, colframe=quarto-callout-warning-color-frame, rightrule=.15mm, left=2mm, toptitle=1mm, title=\textcolor{quarto-callout-warning-color}{\faExclamationTriangle}\hspace{0.5em}{On the simplified nature of analysis in this document.}, titlerule=0mm, bottomrule=.15mm, opacityback=0, colbacktitle=quarto-callout-warning-color!10!white]
-
-Subject of financial analysis is very information-dense and to perform
-such an analysis (be it an analysis of industrial sectors, fundamental,
-technical, etc.) in earnest is a non-trivial job that we don't see
-ourselves capable of performing.
+\begin{tcolorbox}[enhanced jigsaw, leftrule=.75mm, titlerule=0mm, bottomtitle=1mm, toprule=.15mm, colframe=quarto-callout-warning-color-frame, rightrule=.15mm, breakable, left=2mm, opacityback=0, arc=.35mm, toptitle=1mm, colback=white, title=\textcolor{quarto-callout-warning-color}{\faExclamationTriangle}\hspace{0.5em}{On the simplified nature of analysis in this document.}, coltitle=black, bottomrule=.15mm, opacitybacktitle=0.6, colbacktitle=quarto-callout-warning-color!10!white]
 
 Therefore, this document aims to provide a simplified, non-rigorous
-analysis iming to showcase our understanding of course material and
+analysis aiming to showcase our understanding of course material and
 minimal proficiency in scientific communication using tools such as web
 scraping and searching for financial data, DeepSeek LLM with Web Search
 functionality, R language ({``R: {The R Project} for {Statistical
@@ -288,7 +283,7 @@ and Quarto scientific publishing system ({``Quarto''} 2025).
 
 \subsection{Sector Analysis}\label{sector-analysis}
 
-\begin{tcolorbox}[enhanced jigsaw, arc=.35mm, toprule=.15mm, bottomtitle=1mm, leftrule=.75mm, breakable, coltitle=black, colback=white, opacitybacktitle=0.6, colframe=quarto-callout-note-color-frame, rightrule=.15mm, left=2mm, toptitle=1mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Note}, titlerule=0mm, bottomrule=.15mm, opacityback=0, colbacktitle=quarto-callout-note-color!10!white]
+\begin{tcolorbox}[enhanced jigsaw, leftrule=.75mm, titlerule=0mm, bottomtitle=1mm, toprule=.15mm, colframe=quarto-callout-note-color-frame, rightrule=.15mm, breakable, left=2mm, opacityback=0, arc=.35mm, toptitle=1mm, colback=white, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Note}, coltitle=black, bottomrule=.15mm, opacitybacktitle=0.6, colbacktitle=quarto-callout-note-color!10!white]
 
 In this section we analyze financial data on websites such as
 \url{https://finance.yahoo.com}, as well as using the
@@ -487,7 +482,7 @@ characterizes the sector itself.
 \subsection{Personality of the
 Company}\label{personality-of-the-company}
 
-\begin{tcolorbox}[enhanced jigsaw, arc=.35mm, toprule=.15mm, bottomtitle=1mm, leftrule=.75mm, breakable, coltitle=black, colback=white, opacitybacktitle=0.6, colframe=quarto-callout-note-color-frame, rightrule=.15mm, left=2mm, toptitle=1mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Note}, titlerule=0mm, bottomrule=.15mm, opacityback=0, colbacktitle=quarto-callout-note-color!10!white]
+\begin{tcolorbox}[enhanced jigsaw, leftrule=.75mm, titlerule=0mm, bottomtitle=1mm, toprule=.15mm, colframe=quarto-callout-note-color-frame, rightrule=.15mm, breakable, left=2mm, opacityback=0, arc=.35mm, toptitle=1mm, colback=white, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Note}, coltitle=black, bottomrule=.15mm, opacitybacktitle=0.6, colbacktitle=quarto-callout-note-color!10!white]
 
 In this section we collect and cite a variety of publicly available
 sources to perform an analysis of the company personality. We use use
@@ -672,7 +667,7 @@ branding, good leadership and consistent performance.
 
 \subsection{Fundamental Analysis}\label{fundamental-analysis}
 
-\begin{tcolorbox}[enhanced jigsaw, arc=.35mm, toprule=.15mm, bottomtitle=1mm, leftrule=.75mm, breakable, coltitle=black, colback=white, opacitybacktitle=0.6, colframe=quarto-callout-note-color-frame, rightrule=.15mm, left=2mm, toptitle=1mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Note}, titlerule=0mm, bottomrule=.15mm, opacityback=0, colbacktitle=quarto-callout-note-color!10!white]
+\begin{tcolorbox}[enhanced jigsaw, leftrule=.75mm, titlerule=0mm, bottomtitle=1mm, toprule=.15mm, colframe=quarto-callout-note-color-frame, rightrule=.15mm, breakable, left=2mm, opacityback=0, arc=.35mm, toptitle=1mm, colback=white, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Note}, coltitle=black, bottomrule=.15mm, opacitybacktitle=0.6, colbacktitle=quarto-callout-note-color!10!white]
 
 In this section we will take a look at quantitative fundamental analysis
 tools provided by the ``tidyquant'' R language package (Dancho and
@@ -838,7 +833,7 @@ fundamentals.
 
 \subsection{Technical Analysis}\label{technical-analysis}
 
-\begin{tcolorbox}[enhanced jigsaw, arc=.35mm, toprule=.15mm, bottomtitle=1mm, leftrule=.75mm, breakable, coltitle=black, colback=white, opacitybacktitle=0.6, colframe=quarto-callout-note-color-frame, rightrule=.15mm, left=2mm, toptitle=1mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Note}, titlerule=0mm, bottomrule=.15mm, opacityback=0, colbacktitle=quarto-callout-note-color!10!white]
+\begin{tcolorbox}[enhanced jigsaw, leftrule=.75mm, titlerule=0mm, bottomtitle=1mm, toprule=.15mm, colframe=quarto-callout-note-color-frame, rightrule=.15mm, breakable, left=2mm, opacityback=0, arc=.35mm, toptitle=1mm, colback=white, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Note}, coltitle=black, bottomrule=.15mm, opacitybacktitle=0.6, colbacktitle=quarto-callout-note-color!10!white]
 
 Technical analysis in this section follows the wonderful tutorial
 provided here: ({``Financial Modeling with {R}''} 2025)
@@ -1038,7 +1033,7 @@ The analysis predicts stable performance in the short term.
 \subsection{Company Performance
 2019-2024}\label{company-performance-2019-2024}
 
-\begin{tcolorbox}[enhanced jigsaw, arc=.35mm, toprule=.15mm, bottomtitle=1mm, leftrule=.75mm, breakable, coltitle=black, colback=white, opacitybacktitle=0.6, colframe=quarto-callout-note-color-frame, rightrule=.15mm, left=2mm, toptitle=1mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Note}, titlerule=0mm, bottomrule=.15mm, opacityback=0, colbacktitle=quarto-callout-note-color!10!white]
+\begin{tcolorbox}[enhanced jigsaw, leftrule=.75mm, titlerule=0mm, bottomtitle=1mm, toprule=.15mm, colframe=quarto-callout-note-color-frame, rightrule=.15mm, breakable, left=2mm, opacityback=0, arc=.35mm, toptitle=1mm, colback=white, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Note}, coltitle=black, bottomrule=.15mm, opacitybacktitle=0.6, colbacktitle=quarto-callout-note-color!10!white]
 
 In this section we provide some historic data and rudimentary analysis
 of the company during the 2019-2024 period.
@@ -1169,7 +1164,7 @@ performance during the last five-year period.
 
 \subsection{Forecasting}\label{forecasting}
 
-\begin{tcolorbox}[enhanced jigsaw, arc=.35mm, toprule=.15mm, bottomtitle=1mm, leftrule=.75mm, breakable, coltitle=black, colback=white, opacitybacktitle=0.6, colframe=quarto-callout-note-color-frame, rightrule=.15mm, left=2mm, toptitle=1mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Note}, titlerule=0mm, bottomrule=.15mm, opacityback=0, colbacktitle=quarto-callout-note-color!10!white]
+\begin{tcolorbox}[enhanced jigsaw, leftrule=.75mm, titlerule=0mm, bottomtitle=1mm, toprule=.15mm, colframe=quarto-callout-note-color-frame, rightrule=.15mm, breakable, left=2mm, opacityback=0, arc=.35mm, toptitle=1mm, colback=white, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Note}, coltitle=black, bottomrule=.15mm, opacitybacktitle=0.6, colbacktitle=quarto-callout-note-color!10!white]
 
 In this section we use ARIMA model to provide a long-term forecast of
 the company stock price.
